overflow issue

--- a/src/assets/scss/accounts.scss
+++ b/src/assets/scss/accounts.scss
@@ -40,6 +40,8 @@
             }
         }
         .data-table{
+          width: 100%;
+          overflow-x: auto;
           table{
             tbody{
               tr{
